[package]
name = "kuby"
version = "0.0.0-development"
description = "Kubernetes config helpers and utilities."
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.9.0"
dirs = "4.0.0"
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.69.0" }
serde = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
